# LaunchPad

./: .env.example  .gitignore  Anchor.toml  DEVELOPMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/components/: BondingCurveChart.tsx  CreateLaunchModal.tsx  Header.tsx  LaunchCard.tsx  LaunchDetail.tsx  LaunchList.tsx  TradingInterface.tsx
app/contexts/: WalletProvider.tsx
app/hooks/: useLaunchpad.ts
app/utils/: anchor.ts  constants.ts
programs/launchpad/: Cargo.toml
programs/launchpad/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/launchpad/src/instructions/: buy_tokens.rs  create_launch.rs  fees.rs  initialize.rs  migrate.rs  mod.rs  referral.rs  sell_tokens.rs
tests/: launchpad.ts
